objects/Asset.object
<CustomObject>
    <fields>
        <fullName>JulianStartDate__c</fullName>
        <formula>/* Count number of days between Start Date &amp; January 1 1900 AD */
(
    (
        Start_Date__c
        + 1
    )
    - (
        DATE(
            1900,
            1,
            1
        )
        - 1
    )
)
/* Add number of days between noon January 1 4713 BC &amp; January 1 1900 AD. This results in a Julian Start Date */
+ 2415018.5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JulianStartDate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Detail__c</fullName>
        <description>used to add information about the instruments location at the customer site</description>
        <label>Location Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Material_Number__c</fullName>
        <label>Material Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oosight_Coupler__c</fullName>
        <label>Oosight Coupler</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1x Leica (EB10251-DMC)</fullName>
                </value>
                <value>
                    <fullName>1x Leica (EB10251-HCC)</fullName>
                </value>
                <value>
                    <fullName>1x Nikon (EB10251-HR1)</fullName>
                </value>
                <value>
                    <fullName>1x Nikon (EB10251-NLC)</fullName>
                </value>
                <value>
                    <fullName>1x Nikon (EB10251-TEC)</fullName>
                </value>
                <value>
                    <fullName>1x Olympus (EB10251-BXC)</fullName>
                </value>
                <value>
                    <fullName>1x Zeiss (EB10251-ZAC)</fullName>
                </value>
                <value>
                    <fullName>1x Zeiss (EB10251-ZNC)</fullName>
                </value>
                <value>
                    <fullName>0.70x Leica (OP10199-LEI)</fullName>
                </value>
                <value>
                    <fullName>0.67x Nikon (OP10199-NIK)</fullName>
                </value>
                <value>
                    <fullName>0.70x Nikon TE2000 (OP10199-T2K)</fullName>
                </value>
                <value>
                    <fullName>0.63x Olympus IX-n1 (OP10199-OLY)</fullName>
                </value>
                <value>
                    <fullName>0.67x Olympus IX-n0 (OP10199-OLY2)</fullName>
                </value>
                <value>
                    <fullName>0.63x Zeiss (OP10199-ZEI)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <description>Asset location.  When assets shipping from SAP data will map from Functional Location</description>
        <label>Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DX_Inactive_Date__c</fullName>
        <description>Diagnostics Inactive date</description>
        <label>Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Equipment_Number__c</fullName>
        <label>Equipment Number</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_Product_Code__c</fullName>
        <formula>Product2.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INF Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LI_License_Key_2__c</fullName>
        <label>LI License Key 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LI_License_Key_3__c</fullName>
        <label>LI License Key 3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Move_Information__c</fullName>
        <description>LST Support:  Record notes when instrument is relocated.</description>
        <label>Move Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Operating_System__c</fullName>
        <label>Operating System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Windows 7 Operating System</fullName>
                </value>
                <value>
                    <fullName>Dual Windows XP and Windows XP</fullName>
                </value>
                <value>
                    <fullName>Dual Windows 2000 and Windows 2000</fullName>
                </value>
                <value>
                    <fullName>Dual Windows 2000 and Windows 98</fullName>
                </value>
                <value>
                    <fullName>Windows XP non Dual Boot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line_INF__c</fullName>
        <formula>Product2.product_line__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Software__c</fullName>
        <description>Product Line Dependent Picklist</description>
        <inlineHelpText>Please select the Product Family</inlineHelpText>
        <label>Product Software</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Line__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>iLinkPro Software v.1.0 SP1</fullName>
                </value>
                <value>
                    <fullName>iLinkPro Software v.1.0 SP2</fullName>
                </value>
                <value>
                    <fullName>iLinkPro Software v.1.1</fullName>
                </value>
                <value>
                    <fullName>iLinkPro Software v.1.1 SP3</fullName>
                </value>
                <value>
                    <fullName>iLinkPro Software v.1.1 SP4</fullName>
                </value>
                <value>
                    <fullName>Maestro Software v.4.1.7</fullName>
                </value>
                <value>
                    <fullName>Maestro Software v.4.2 SP3</fullName>
                </value>
                <value>
                    <fullName>Maestro Software v.4.4 SP1</fullName>
                </value>
                <value>
                    <fullName>Maestro Software v.4.4 SP2</fullName>
                </value>
                <value>
                    <fullName>Maestro Software v.5.0 SP1</fullName>
                </value>
                <value>
                    <fullName>RapidPlate v.1.01</fullName>
                </value>
                <value>
                    <fullName>RapidPlate v.1.4</fullName>
                </value>
                <value>
                    <fullName>RapidPlate v.2.3</fullName>
                </value>
                <value>
                    <fullName>RapidPlate v.2.4</fullName>
                </value>
                <value>
                    <fullName>RapidPlate v.2.5</fullName>
                </value>
                <value>
                    <fullName>Sciclone Software v.3.2</fullName>
                </value>
                <value>
                    <fullName>Sciclone Software v.3.4 SP2</fullName>
                </value>
                <value>
                    <fullName>Sciclone Software v.3.5</fullName>
                </value>
                <value>
                    <fullName>Sciclone Software v.3.5 SP1</fullName>
                </value>
                <value>
                    <fullName>Zephyr Genomic Workstation v.1.0</fullName>
                </value>
                <value>
                    <fullName>Zephyr SPE v.1.0</fullName>
                </value>
                <value>
                    <fullName>Living Image v.4.3.1</fullName>
                </value>
                <value>
                    <fullName>Living Image v.4.2</fullName>
                </value>
                <value>
                    <fullName>Living Image v.4.1</fullName>
                </value>
                <value>
                    <fullName>Living Image v.4.0</fullName>
                </value>
                <value>
                    <fullName>Living Image v.3.2</fullName>
                </value>
                <value>
                    <fullName>Living Image v.3.1</fullName>
                </value>
                <value>
                    <fullName>Living Image v.3.0</fullName>
                </value>
                <value>
                    <fullName>Living Image v.2.60.02</fullName>
                </value>
                <value>
                    <fullName>Living Image v.2.60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_Equipment_ID__c</fullName>
        <description>SAP Contract ID</description>
        <label>SAP Equipment ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_Version__c</fullName>
        <label>Software Version</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inForm_Serial_No__c</fullName>
        <description>CRi product data</description>
        <label>inForm Serial No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DyCE_Software_Key__c</fullName>
        <description>CRi product data</description>
        <label>DyCE Software Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Description__c</fullName>
        <label>Model Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_DyCE_Key__c</fullName>
        <description>CRi product data</description>
        <label>Original DyCE Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LW_Project_Manager__c</fullName>
        <label>LW Project Manager</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Chris Mantooth</fullName>
                    <default>true</default>
                    <label>Chris Mantooth</label>
                </value>
                <value>
                    <fullName>John Nobles</fullName>
                </value>
                <value>
                    <fullName>Marcus Svee</fullName>
                </value>
                <value>
                    <fullName>Mike Lehtola</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Order_Number__c</fullName>
        <description>SO history from Oracle</description>
        <inlineHelpText>Instrument purchase SO</inlineHelpText>
        <label>Sales Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <description>CRi and CALP historic information related to this asset</description>
        <label>Additional Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Crystal_Reports_Key__c</fullName>
        <inlineHelpText>Enter the Crystal Report license key</inlineHelpText>
        <label>Crystal Reports Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entitlement_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be checked by Entitlement Trigger when Status is changed.</description>
        <label>Entitlement Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Assets (Renewal Opportunity)</relationshipLabel>
        <relationshipName>Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAP_Contract_Number__c</fullName>
        <label>SAP Contract Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Satisfaction_Rating__c</fullName>
        <label>Satisfaction Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UNKNOWN</fullName>
                    <default>true</default>
                    <label>UNKNOWN</label>
                </value>
                <value>
                    <fullName>NEUTRAL</fullName>
                </value>
                <value>
                    <fullName>POSITIVE</fullName>
                </value>
                <value>
                    <fullName>NEGATIVE</fullName>
                </value>
                <value>
                    <fullName>REFERENCE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty_Start_Date__c</fullName>
        <label>Warranty Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inForm_Software_Key__c</fullName>
        <description>CRi product data</description>
        <label>inForm Software Key</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Contract_Type__c</fullName>
        <label>Active Contract Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Expiry_Date__c</fullName>
        <label>Warranty Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Software_Key__c</fullName>
        <description>CRi data, software ships with one key, can be updated by FSE at install</description>
        <label>Original Software Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Description__c</fullName>
        <description>Funcational Description</description>
        <label>Functional Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oosight_Compensator_S_N__c</fullName>
        <description>CRi product data</description>
        <label>Oosight Compensator S/N</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Contract_End_Date__c</fullName>
        <description>From Caliper production.</description>
        <label>Active Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Line_Item_Value__c</fullName>
        <label>Contract Line Item Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Service_Activity_Date__c</fullName>
        <label>Last Service Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maintenance_Planning_Group__c</fullName>
        <label>Maintenance Planning Group</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Opportunity_Sequence__c</fullName>
        <inlineHelpText>Set this field ONLY when duplicate assets exist AND set a different number for each unique Original Opportunity</inlineHelpText>
        <label>Import Opportunity Sequence</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>